--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -8,7 +8,7 @@
     padding:0px 0px 0px 0px;
 }
 .subject-list-sub {
-    background-color:#eee;
+    background-color:#fcfcfc;
     margin:0px 0px 0px 0px;
     padding:10px 10px 10px 10px;
 }
