--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -1,3 +1,14 @@
+.logo-top {
+    max-width:500px;
+    margin:20px auto 0 auto;
+    padding:30px;
+}
+.logo-top img {
+    width:100%;
+}
+.navbar-header img {
+    height:25px;
+}
 .navbar-header form {
     margin:0px;
     padding:8px;
