--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -1,3 +1,9 @@
+.white {
+    background: rgb(255, 255, 255);
+}
+.subject-relation-sub ul {
+  list-style-type: none;
+}
 .logo-top {
     max-width:500px;
     margin:20px auto 0 auto;
