--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -1,8 +1,11 @@
+.form-control.date {
+    max-width:200px;
+}
 .white {
     background: rgb(255, 255, 255);
 }
 .subject-relation-sub ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 .logo-top {
     max-width:500px;
