--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -4,7 +4,7 @@
 .white {
     background: rgb(255, 255, 255);
 }
-.subject-relation-sub ul {
+ul.subject-list-relation {
     list-style-type: none;
 }
 .logo-top {
