--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -62,6 +62,10 @@ ul.subject-list-relation {
 .subject-relation-main {
     padding:20px;
 }
+.subject-relation-sub h4 {
+    margin-left:20px;
+    color:#439a88;
+}
 .second-relation {
     height:250px;
     margin-bottom:10px;
