--- a/webroot/css/local.css
+++ b/webroot/css/local.css
@@ -16,6 +16,9 @@ ul.subject-list-relation > li {
     margin:20px auto 0 auto;
     padding:30px;
 }
+.home {
+    font-size: large;
+}
 .logo-top img {
     width:100%;
 }
